--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "datafile": "^3.2.0",
     "eslint": "^3.13.1",
     "expect": "^1.6.0",
+    "husky": "^1.3.1",
     "istanbul": "1.0.0-alpha.2",
     "jsdoc": "^3.5.3",
     "mocha": "^5.2.0",
@@ -53,6 +54,11 @@
     "pre-push": "^0.1.1",
     "prettier": "^1.15.3",
     "redux-mock-store": "^1.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier && npm run docs && npm run test && npm run build"
+    }
   },
   "prettier": {
     "printWidth": 120,
