--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier && npm run docs && npm run test && npm run build"
+      "pre-commit": "npm run prettier && npm run lint && npm run docs && npm run test && npm run build"
     }
   },
   "prettier": {
